Fixed spacing between fixed header and section header.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -6,6 +6,9 @@
 * Authors: Vladimir Anusic
 */
 
+body {
+	padding-top: 4rem;
+}
 
 /**
 * Header fixed
@@ -126,10 +129,9 @@ section#header {
 	position: relative;
 
 	background-image: url(../images/header.jpg);
-	background-size: 1920px 850px;
-	background-position: center bottom;
+	background-size: 100% 100%;
+	background-position: center center;
 	background-repeat: no-repeat;
-	margin-top: 110px;
 	min-height: 700px;
 }
 
